tests/baselines/reference/parserErrorRecovery_ExtendsOrImplementsClause3.errors.txt
==== tests/cases/compiler/parserErrorRecovery_ExtendsOrImplementsClause3.ts (2 errors) ====
    class C extends implements A {
            ~~~~~~~
!!! parserErrorRecovery_ExtendsOrImplementsClause3.ts(1,9): error TS1096: 'extends' list cannot be empty.
                               ~
!!! parserErrorRecovery_ExtendsOrImplementsClause3.ts(1,28): error TS2095: Cannot find name 'A'.
    }